# Gradient-Descent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml
demos/: demo_adagrad.cpp  demo_adam.cpp  demo_gd.cpp  demo_rmsprop.cpp  first.cpp  second.cpp
include/: batch.hpp  computer.hpp  gradientDescent.hpp  losses.hpp  lr.hpp  regression.hpp  tensor.hpp  transformer.hpp
include/gr/: gradient_descent.hpp  optimizers.hpp  stop_conditions.hpp  types.hpp  utils.hpp
src/: batch.cpp  computer.cpp  gradientDescent.cpp  gradient_descent.cpp  losses.cpp  lr.cpp  optimizers.cpp  regression.cpp  stop_conditions.cpp  tensor.cpp  transformer.cpp  utils.cpp
tests/: test_all.cpp
